fixing header overflow properties

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ p {
     position: sticky;
     top: 0;
     z-index: 100;
-    overflow: hidden;
 }
 .logo {
     width: 62px;
